# nodejs-goof

./: .dccache  .dockerignore  .env  .fossa.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  .snyk  .snyk_ignores  .travis.yml  Agreement  ApplicationStartupHandlerRegistryImpl.cs  Dockerfile  Dockerfile2  Jenkinsfile  PageTemplatePreview.cs  ParallelizationProviderRegistryImpl.cs  README.md  RequestInterceptorHttpModule.cs  SECURITY.md  Snyk_GH_Issues.py  SystemCollectionValueXmlSerializer.cs  ViewTransitionHelper.cs  WeakCrypto.cbl  accept.json  app.Dockerfile  app.js  app.json  azure-pipelines-snyk-sca-sast-demo.yml  azure-pipelines.yml  azure-pipelines_snyk.yml  bitbucket-pipelines.yml  buildspec.yml  command-injection.js  config.yml  db.js  deploy-heroku.md  deployment.yaml  deps.txt  (+47 more)
.circleci/: config.yaml  config.yml
.githooks/: pre-commit
.github/: CODEOWNERS  scan.yml  (+2 more)
ci-scripts-library/: .gitignore  Dockerfile  README.md  pyproject.toml
ci-scripts-library/.github/workflows/: build-test-release.yml  build-test.yml  deploy.yml  test.yml
ci-scripts-library/ci_scripts_library/core/: __init__.py  github.py  github_models.py  snyk_client.py  snyk_managers.py  snyk_models.py  super_snyk_client.py  utils.py
ci-scripts-library/ci_scripts_library/snyk_sarif_to_gh_issues/: cli.py
ci-scripts-library/ci_scripts_library/snyk_scm_issues_to_gh_issues/: cli.py
ci-scripts-library/ci_scripts_library/testing_cli/: cli.py
ci-scripts-library/ci_scripts_library/tests/fixtures/: snyk.sarif
ci-scripts-library/scripts/: entrypoint.sh
docs/: API.md  (+8 more)
(+305 files in other folders)
